@@ -2,7 +2,7 @@
 <addons>
 <addon id="metadata.themoviedb.org.he"
        name="The Movie Database Hebrew"
-       version="5.1.5"
+       version="5.1.7"
        provider-name="Team Kodi">
   <requires>
     <import addon="xbmc.metadata" version="2.1.0"/>
